--- a/BGpt/templates/BGpt/history.html
+++ b/BGpt/templates/BGpt/history.html
@@ -42,10 +42,13 @@
 
     <div class="col-8">
         <div id="edit-cont">
-            <button class="btn-prim" id="edit"> Edit</button>
+            <!-- <button class="btn-prim" id="edit"> Edit</button>
             <div id="info">* click on an input to edit</div>
             <button class="btn-prim" id="save"> Save</button>
-            <button class="btn-prim" id="cancel"> Cancel</button>
+            <button class="btn-prim" id="cancel"> Cancel</button> -->
+            <button type="button" id="edit" class="btn btn-prim" data-bs-toggle="modal" data-bs-target="#edit_chat">
+                Edit
+              </button>
         </div>
         <ul class="list-group list-group-responses">
             {% for sessions in history %}
@@ -60,7 +63,32 @@
     </div>
 </div>
 
+<!-- EDIT MODAL  -->
+<div class="modal fade modal-xl" id="edit_chat" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Edit chat</h1>
+          <button type="button" class="btn-close cancel" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          This is where text areas appear
+          <div id="edit-mod" class="list-group list-group-responses" ></div>
+          
 
+        </div>
+        <div class="modal-footer">
+          <!-- <a href="{% url 'history' user.id %}" class="btn btn-sec">View Full history</a> -->
+          <!-- <button type="button" class="btn btn-sec" data-bs-dismiss="modal">Close</button> -->
+          <!-- <button type="button" class="btn btn-prim">Save changes</button> -->
+          Buttons are here:
+            <button type="button" class="btn btn-sec cancel" id="save" data-bs-dismiss="modal">Save</button>
+            <button type="button" class="btn btn-sec cancel" data-bs-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
 {% block page_scripts %}
