--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -349,3 +349,9 @@ footer{
     overflow: hidden;
     white-space: nowrap;
 }
+
+#edit-title{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
