--- a/BGpt/templates/BGpt/history.html
+++ b/BGpt/templates/BGpt/history.html
@@ -15,7 +15,7 @@
                 {% for h in sessions %}
                     {% ifchanged %}
                     <a class="list-group-item" data-id="ch-{{ h.session }}" href="#chat-{{ h.session }}" role="tab" aria-controls="list-{{ h.session }}">
-                        <li class="title-list">{{ h.title }}</li>    
+                        <li class="title-list" id="item-{{h.session}}" >{{ h.title }}</li>    
                     </a>
                     {% endifchanged %}
                 {% endfor %}
@@ -71,11 +71,11 @@
           <h1 class="modal-title fs-5" id="exampleModalLabel">Edit chat</h1>
           <button type="button" class="btn-close cancel" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
+        <div class="modal-title" id="edit-title">
+            <h2 class="modal-title fs-5" id="chat-title" contenteditable="true" ></h2>
+        </div>
         <div class="modal-body">
-          This is where text areas appear
           <div id="edit-mod" class="list-group list-group-responses" ></div>
-          
-
         </div>
         <div class="modal-footer">
           <!-- <a href="{% url 'history' user.id %}" class="btn btn-sec">View Full history</a> -->
