--- a/BGpt/templates/BGpt/history.html
+++ b/BGpt/templates/BGpt/history.html
@@ -68,11 +68,11 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Edit chat</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Edit chat <i class="fa-regular fa-pen-to-square"></i></h1>
           <button type="button" class="btn-close cancel" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-title" id="edit-title">
-            <h2 class="modal-title fs-5" id="chat-title" contenteditable="true" ></h2>
+            <h2 class="modal-title fs-5" id="chat-title" contenteditable="true"><i class="fa-regular fa-pen-to-square"></i></h2>
         </div>
         <div class="modal-body">
           <div id="edit-mod" class="list-group list-group-responses" ></div>
