--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -75,6 +75,9 @@ body #response, body #resp-trans {
   justify-content: flex-start;
   margin: auto;
 }
+body .col-8 {
+  padding-top: 10px;
+}
 body #bgpt-logo-cont {
   display: flex;
   flex-direction: row;
@@ -183,6 +186,11 @@ body .list-group {
   max-height: 380px;
   overflow-y: auto;
   border: none;
+}
+body .bg-light2 {
+  background-color: white;
+  border: none;
+  box-shadow: none;
 }
 body .list-group-responses > * {
   display: none;
