--- a/BGpt/templates/BGpt/layout.html
+++ b/BGpt/templates/BGpt/layout.html
@@ -14,7 +14,7 @@
     <title>{% block title %}BGpt: Conversational Language Learning{% endblock %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light2">
         <div class="container-fluid">
           <a class="navbar-brand" href="/"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
               {% if user.is_authenticated %}
-              <a class="nav-link" href="#">{{ user.username }}</a>
+              <a class="nav-link" href="#">{{ user.username | capfirst }}</a>
               <a class="nav-link" href="{% url 'history' user.id %}">History</a>
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
