--- a/BGpt/templates/BGpt/profile.html
+++ b/BGpt/templates/BGpt/profile.html
@@ -1,4 +1,12 @@
 {% extends "BGpt/layout.html" %}
 {% load static %}
 
-{% block body %} {% endblock %}
+{% block body %} 
+<div id="bgpt-logo-cont">
+    <h1>B</h1>
+    <h1>G</h1>
+    <h3>p</h3>
+    <h3>t</h3>
+</div>
+
+{% endblock %}
