add basic profile info

--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -314,4 +314,23 @@ footer {
   padding: 5px 10px 5px 10px;
 }
 
+#formcontainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+#formcontainer #prof_btns {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+#formcontainer #prof_btns > * {
+  margin: 10% 0 10% 0;
+}
+
+#change-deets {
+  display: none;
+}
+
 /*# sourceMappingURL=styles.css.map */
