--- a/BGpt/templates/BGpt/layout.html
+++ b/BGpt/templates/BGpt/layout.html
@@ -36,15 +36,15 @@
         </div>
       </nav>
 
-      <div class="body">
+      <div class="body-cont">
         {% block body %}
         
         {% endblock %}
       </div>
+      <footer>
+        <div>Created for CS50W's Capstone Assignment.</div>
+        <div>Follow me on: <a href="https://github.com/dermotbg" target="_blank">Github</a></div>
+          {% block page_scripts %}{% endblock %}
+      </footer>
 </body>
-<footer>
-  <div>Created for CS50W's Capstone Assignment.</div>
-  <div>Follow me on: <a href="https://github.com/dermotbg" target="_blank">Github</a></div>
-    {% block page_scripts %}{% endblock %}
-</footer>
 </html>
