--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -322,11 +322,10 @@ footer {
   padding: 5px 10px 5px 10px;
 }
 
-#formcontainer {
+#formcontainer .user-cont {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
 }
 #formcontainer #prof_btns {
   display: flex;
@@ -344,6 +343,22 @@ footer {
 }
 #formcontainer .deets-cont > * {
   width: 50%;
+}
+#formcontainer #change-user {
+  animation-name: slide;
+  animation-duration: 2s;
+  animation-fill-mode: backwards;
+  animation-play-state: paused;
+}
+@keyframes slide {
+  from {
+    transform: translateX(0);
+    -webkit-transform: translateX(0);
+  }
+  to {
+    transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+  }
 }
 #formcontainer .view-deets > * {
   padding: 2% 2% 2% 2%;
