--- a/BGpt/templates/BGpt/history.html
+++ b/BGpt/templates/BGpt/history.html
@@ -92,5 +92,5 @@
 
 {% endblock %}
 {% block page_scripts %}
-<script src="/static/BGpt/history.js"></script>
+<script src="{% static 'BGpt/history.js' %}"></script>
 {% endblock %}
