--- a/BGpt/templates/BGpt/index.html
+++ b/BGpt/templates/BGpt/index.html
@@ -171,5 +171,5 @@
 
 
 {% block page_scripts %}
-<script src="static/BGpt/audio.js"></script>
+<script src="{% static 'BGpt/audio.js' %}"></script>
 {% endblock %}
