--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -411,7 +411,7 @@ footer{
     .deets-cont > * {
         width: 50%;
     }
-    #change-user{
+    #change-user, #change-pw{
         animation-name: slide;
         animation-duration: 800ms;
         animation-fill-mode: backwards;
@@ -437,4 +437,5 @@ footer{
 }
 #change-pw{
     display: none;
+    justify-content: center;
 }
