--- a/BGpt/templates/BGpt/profile.html
+++ b/BGpt/templates/BGpt/profile.html
@@ -43,7 +43,7 @@
         </div>
         <div id="prof_btns">
             <button class="btn btn-prim" id="edit-user">Edit information</button>
-            <button class="btn btn-prim">Change Password</button>
+            <button class="btn btn-prim" id="edit-pw">Change Password</button>
         </div>
     </div>
     <!-- Change User info -->
