--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -412,12 +412,17 @@ footer{
         width: 50%;
     }
     #change-user, #change-pw{
-        animation-name: slide;
         animation-duration: 800ms;
         animation-fill-mode: backwards;
         animation-play-state: paused;
     }
-    @keyframes slide {
+    .slide-in{
+        animation-name: slide-in;
+    }
+    .slide-out{
+        animation-name: slide-out;
+    }
+    @keyframes slide-in {
         from{
             transform: translateX(-100%);
             -webkit-transform: translateX(-100%);
@@ -425,6 +430,16 @@ footer{
         to{
             transform: translateX(0%);
             -webkit-transform: translateX(0%);
+        }
+    }
+    @keyframes slide-out {
+        from{
+            transform: translateX(0%);
+            -webkit-transform: translateX(0%);
+        }
+        to{
+            transform: translateX(100%);
+            -webkit-transform: translateX(100%);
         }
     }
     .view-deets > * {
