--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -397,10 +397,19 @@ footer{
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        
     }
     #prof_btns > * {
         margin: 10% 0 10% 0;
+    }
+    @media (max-width: 600px){
+        .user-cont{
+            flex-direction: column;
+            justify-content: center;
+        }
+        #prof_btns > * {
+            margin: 5% 25% 5% 25%;
+            width: 50%;
+        }
     }
     .deets-cont{
         display: flex;
