fixed cancel btn on user data form

--- a/BGpt/templates/BGpt/profile.html
+++ b/BGpt/templates/BGpt/profile.html
@@ -68,7 +68,7 @@
             </div>
             <div class="btn-cont btn-reg">
                 <button type="submit" class="btn btn-prim" name="update-info">Submit</button>
-                <a href="{% url 'index' %}" class="btn btn-prim">Cancel</a>
+                <a href="{% url 'profile' user.id %}"class="btn btn-prim">Cancel</a>
             </div>
         </form>
     </div>
