--- a/BGpt/templates/BGpt/profile.html
+++ b/BGpt/templates/BGpt/profile.html
@@ -56,7 +56,7 @@
             </div>
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input class="form-control" type="email" name="email" placeholder="Email Address">
+                <input class="form-control" type="email" name="email" {% if user.email %} placeholder="{{ user.email}}" {% else %} placeholder="Email Address" {% endif %}>
             </div>
             <div class="form-group">
                 <label for="first_name">First Name:</label>
