implement slide on login page

--- a/BGpt/templates/BGpt/profile.html
+++ b/BGpt/templates/BGpt/profile.html
@@ -101,4 +101,4 @@
     </div>
 </div>
 {% endblock %}
-{% block page_scripts %}<script src="{% static 'BGpt/profile.js' %}"></script>{% endblock %}
+{% block page_scripts %}<script src="{% static 'BGpt/slide.js' %}"></script>{% endblock %}
