--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -40,13 +40,19 @@ body #register-cont {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  animation-duration: 500ms;
+  animation-fill-mode: backwards;
+  animation-play-state: paused;
 }
 body #login-cont {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 5px 5px 5px 5px;
+  animation-duration: 500ms;
+  animation-fill-mode: backwards;
+  animation-play-state: paused;
 }
 body .form-group {
   margin-bottom: 5px;
@@ -359,12 +365,28 @@ footer {
   animation-fill-mode: backwards;
   animation-play-state: paused;
 }
-#formcontainer .slide-in {
+#formcontainer .view-deets > * {
+  padding: 2% 2% 2% 2%;
+}
+
+#change-user {
+  display: none;
+  justify-content: center;
+}
+
+#change-pw {
+  display: none;
+  justify-content: center;
+}
+
+.slide-in {
   animation-name: slide-in;
 }
-#formcontainer .slide-out {
+
+.slide-out {
   animation-name: slide-out;
 }
+
 @keyframes slide-in {
   from {
     transform: translateX(-100%);
@@ -384,19 +406,6 @@ footer {
     transform: translateX(100%);
     -webkit-transform: translateX(100%);
   }
-}
-#formcontainer .view-deets > * {
-  padding: 2% 2% 2% 2%;
-}
-
-#change-user {
-  display: none;
-  justify-content: center;
-}
-
-#change-pw {
-  display: none;
-  justify-content: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
