--- a/BGpt/templates/BGpt/login_register.html
+++ b/BGpt/templates/BGpt/login_register.html
@@ -24,10 +24,10 @@
             <input class="form-control" type="email" name="email" placeholder="Email Address">
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
+            <input class="form-control" type="password" name="password" placeholder="Password" autocomplete="on">
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password" autocomplete="on">
         </div>
         <div class="btn-cont btn-reg">
             <button type="submit" class="btn btn-prim">Submit</button>
@@ -44,7 +44,7 @@
             <input class="form-control" autofocus type="text" name="username" placeholder="Username">
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
+            <input class="form-control" type="password" name="password" placeholder="Password" autocomplete="on">
         </div>
         <div class="btn-cont btn-reg">
             <button type="submit" class="btn btn-prim">Submit</button>
@@ -57,6 +57,7 @@
 </div>
 {% endblock %}
 {% block page_scripts %}
+<script src="{% static 'BGpt/slide.js' %}"></script>
 <script>
     document.addEventListener('DOMContentLoaded', () => {
 
@@ -80,13 +81,9 @@
 
         reg_btn.addEventListener('click', () => {
             message.style.display = 'none';
-            login.style.display = 'none';
-            reg.style.display = 'flex';
         });
         login_btn.addEventListener('click', () => {
             message.style.display = 'none';
-            login.style.display = 'flex';
-            reg.style.display = 'none';
         });
     });
 </script>
