--- a/BGpt/templates/BGpt/login_register.html
+++ b/BGpt/templates/BGpt/login_register.html
@@ -9,52 +9,55 @@
     <h3>t</h3>
 </div>
 
-<div class="btn-cont">
-    <button type="button" class="btn-prim" id="login">Login</button>
-    <button type="button" class="btn-prim" id="register">Register</button>
-</div>
-<!-- REG FORM -->
-<div id="register-cont">
-    <form action="{% url 'register' %}" method="post" autocomplete="off">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" autofocus type="text" name="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password" autocomplete="on">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password" autocomplete="on">
-        </div>
-        <div class="btn-cont btn-reg">
-            <button type="submit" class="btn btn-prim">Submit</button>
-            <a href="{% url 'index' %}" class="btn btn-prim">Cancel</a>
-        </div>
-    </form>
+<div id="cont-cont">
+    <div class="btn-cont log">
+        <button type="button" class="btn btn-prim" id="login">Login</button>
+        <button type="button" class="btn btn-prim" id="register">Register</button>
+    </div>
+    <!-- REG FORM -->
+    <div id="register-cont">
+        <form action="{% url 'register' %}" method="post" autocomplete="off">
+            {% csrf_token %}
+            <div class="form-group">
+                <input class="form-control" autofocus type="text" name="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="email" name="email" placeholder="Email Address">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="Password" autocomplete="on">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password" autocomplete="on">
+            </div>
+            <div class="btn-cont btn-reg">
+                <button type="submit" class="btn btn-prim">Submit</button>
+                <a href="{% url 'index' %}" class="btn btn-prim">Cancel</a>
+            </div>
+        </form>
+    </div>
+    
+    <!-- Login Form -->
+    <div id="login-cont">
+        <form action="{% url 'login' %}" method="post" autocomplete="off">
+            {% csrf_token %}
+            <div class="form-group">
+                <input class="form-control" autofocus type="text" name="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="Password" autocomplete="on">
+            </div>
+            <div class="btn-cont btn-reg">
+                <button type="submit" class="btn btn-prim">Submit</button>
+                <a href="{% url 'index' %}" class="btn btn-prim">Cancel</a>
+            </div>
+        </form>
+    </div>
+    <div class="message">
+        {{ message }}
+    </div>
 </div>
 
-<!-- Login Form -->
-<div id="login-cont">
-    <form action="{% url 'login' %}" method="post" autocomplete="off">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" autofocus type="text" name="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password" autocomplete="on">
-        </div>
-        <div class="btn-cont btn-reg">
-            <button type="submit" class="btn btn-prim">Submit</button>
-            <a href="{% url 'index' %}" class="btn btn-prim">Cancel</a>
-        </div>
-    </form>
-</div>
-<div class="message">
-    {{ message }}
-</div>
 {% endblock %}
 {% block page_scripts %}
 <script src="{% static 'BGpt/slide.js' %}"></script>
