fixed session_id bug

--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -108,7 +108,7 @@ body{
 
     #response, #resp-trans{
         display: flex;
-        border: 10px solid red;
+        // border: 10px solid red;
         flex-direction: row;
         flex-wrap: wrap;
         max-width: 80%;
