--- a/BGpt/templates/BGpt/index.html
+++ b/BGpt/templates/BGpt/index.html
@@ -117,8 +117,8 @@
           </div>
 
           <div id="resp-cont">
-            <div id="response"></div>
-            <div id="resp-trans"></div>
+            <div id="response" class="bubble right"></div>
+            <div id="resp-trans" class="bubble left"></div>
           </div>
         </div>
         <div class="modal-footer">
