--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -86,7 +86,10 @@ body .message {
 body #resp-cont {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
+}
+body #resp-cont > * {
+  margin: 8% 0 8% 0;
 }
 body #response, body #resp-trans {
   display: flex;
@@ -95,7 +98,6 @@ body #response, body #resp-trans {
   max-width: 80%;
   align-items: center;
   justify-content: flex-start;
-  margin: auto;
 }
 body .col-8 {
   padding-top: 10px;
