--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -103,7 +103,10 @@ body{
     #resp-cont{
         display: flex;
         flex-direction: column;
-        align-items: center;
+        justify-content: center;
+    }
+    #resp-cont > * {
+        margin: 8% 0 8% 0;
     }
 
     #response, #resp-trans{
@@ -114,7 +117,7 @@ body{
         max-width: 80%;
         align-items: center;
         justify-content: flex-start;
-        margin: auto;
+        // margin: auto;
     }
     .col-8{
         padding-top: 10px;
@@ -281,6 +284,9 @@ body{
         }
 
     }
+}
+#chat-modal{
+    
 }
 footer{
     display: flex;
