--- a/BGpt/templates/BGpt/index.html
+++ b/BGpt/templates/BGpt/index.html
@@ -91,9 +91,9 @@
           <h1 class="modal-title fs-5" id="exampleModalLabel">Let's Chat!</h1>
           <button type="button" class="btn-close cls-sess" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body" id="chat-modal">
           <h6>Please which language you speak, and which language you wish to translate to:</h6>
-          <select name="lang" id="lang_selector">
+          <select name="lang" id="lang-selector">
               <option value="bg-en" selected="selected">BG -> ENG</option>
               <option value="en-bg">ENG -> BG</option>
           </select>
