Update chat modal / Add model desc cards

--- a/BGpt/static/BGpt/styles.css
+++ b/BGpt/static/BGpt/styles.css
@@ -278,9 +278,14 @@ body .resp {
   margin: 12px 0 12px 0;
 }
 
-#lang-selector {
-  max-width: 50%;
-  margin-left: 25%;
+#lang-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+#lang-container > * {
+  font-size: large;
 }
 
 #chat-title {
@@ -446,6 +451,15 @@ footer {
     transform: translateX(100%);
     -webkit-transform: translateX(100%);
   }
+}
+.model-inactive {
+  display: none;
+  transform: translate(100%);
+}
+
+.model-active {
+  display: block;
+  transform: translate(0%);
 }
 
 /*# sourceMappingURL=styles.css.map */
