--- a/BGpt/templates/BGpt/layout.html
+++ b/BGpt/templates/BGpt/layout.html
@@ -43,7 +43,7 @@
       </div>
       <footer>
         <div>Created for CS50W's Capstone Assignment.</div>
-        <div>Follow me on: <a href="https://github.com/dermotbg" target="_blank">Github</a></div>
+        <div>Follow me on: <a href="https://github.com/dermotbg" target="_blank"><i class="fa-brands fa-github" style="color: #000000;"></i></i></a></div>
       </footer>
       {% block page_scripts %}{% endblock %}
   </body>
